# mcp-rendercv

./: .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.yml  mcp.example.json  pyproject.toml
deploy/: docker-compose.yml
rendercv_mcp/: __main__.py  config.py  executor.py  fileserver.py  server.py
tests/: test_executor.py  test_server.py
