[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rendercv-mcp"
version = "0.1.0"
description = "MCP server wrapping the RenderCV CLI"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9.0",
    "rendercv[full]>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
rendercv-mcp = "rendercv_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["rendercv_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
